--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Naren Ramesh - Math, Stats, CS</h1>
+<p>Welcome to my personal portfolio!</p>
 </body>
 </html>
